# charloratools

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pylintrc  404.html  MANIFEST.in  README.md  codecov.yaml  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: build-deploy-docs.yml  lint-run-tests.yml  publish-package.yml  test-publish-package.yml
blog/: index.html
cli/: index.html
docs/: cli.md  errors.md  filterai.md  index.md  scrapers.md  sysfilemanager.md  utils.md
docs/css/: custom.css
errors/: index.html
filterai/: index.html
scrapers/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/cli/: index.html
site/errors/: index.html
site/filterai/: index.html
site/scrapers/: index.html
site/search/: search_index.json
site/sysfilemanager/: index.html
site/utils/: index.html
src/charloratools/: FilterAI.py  Scrapers.py  SysFileManager.py  __init__.py  cli.py  errors.py  utils.py
sysfilemanager/: index.html
tests/: conftest.py  test_cli.py  test_filterai.py  test_scrapers.py  test_sysfilemanager.py  test_utils.py
utils/: index.html
