[build-system]
requires = ["setuptools>=42", "wheel",'pip']
build-backend = "setuptools.build_meta"

[project]
name = "charloratools"
version = "0.2.3"
description = "Python package including tools that facilitate training images scraping, management, and filtering for stable diffusion character LoRa training."
requires-python = ">=3.10.6"
#Installed dynamically in setup: -torch,torchvision,torchaudio,xformers,facenet_pytorch
dependencies = [
"numpy>=1.24.0,<2.0.0",
"requests>=2.0.0,<3.0.0",
"Pillow>=10.2.0,<10.3.0",
"opencv-python>=4.9.0",
"scipy>=1.10.0,<2.0.0",
"tqdm>=4.0.0,<5.0.0",
"pandas>=2.0.0,<3.0.0",
"imagehash>=4.0.0",
"selenium>=4.0.0",
"webdriver-manager>=3.0.0",
"onnx>=1.14.0",
"matplotlib",
"scikit-learn>=1.3.0",
"scikit-image",
"easydict",
"cython>=3.0.2",
"albumentations",
"prettytable",
"coloredlogs>=15.0",
"flatbuffers>=23.3.3",
"gdp"
]
authors=[{name="svdC1",email="svdc1mail@gmail.com"}]
maintainers=[{name="svdC1",email="svdc1mail@gmail.com"}]
dynamic=['classifiers']
readme="README.md"
[project.optional-dependencies]
dev = ["coverage>=7.0.0,<8.0.0",
"codecov>=2.0.0,<3.0.0",
"jupyter>=1.0.0"
]

[project.urls]
repository = "https://github.com/svdC1/charloratools"
documentation = "https://github.com/svdC1/charloratools/wiki"

[tool.setuptools]
